# cambria

./: .gitignore  .gitmodules  CLAUDE.md  README.md  cambria.cabal  language_reference.tex  library.bib  main.tex  test.tex  typing-rules.tex
.claude/: settings.json
.claude/hooks/: session-start.sh
examples/: actions.cba  betabernoulli.cba  clustergraph.cba  effect_unhandled.cba  encodeactions.cba  erdosrenyi.cba  graph_bias.cba  graph_state.cba  graphon.cba  handler_bound_reuse.cba  handler_clause_overlap.cba  handler_nested_passthrough.cba  handler_reuse.cba  handler_reuse_no_passthrough.cba  handler_reuse_polymorphic.cba  jumps.cba  local_state.cba  natural_deduction.cba  pattern_matching.cba  poly_fold_refs.cba  poly_map.cba  poly_map_pair.cba  poly_pair.cba  poly_swap_refs.cba  poly_with_ref.cba  polya.cba  polya_bias.cba  polya_state.cba  sequent_prover.cba  substitution.cba  threads-child.cba  threads-dag.cba  threads-parent.cba  threads.cba  threads_child.cba  threads_dag.cba  threads_parent.cba  type_params.cba  type_params_abstract_handler.cba  type_params_mismatch.cba  (+2 more)
implementation/: CHANGELOG.md  ]  cambria.cabal  collect.cam  collect.par  collect.txt  func.cam  implementation.cabal  info.txt  new.cam  noop.cam  noop1.cam  pickMax.cam  return.cam  substitution.cam
implementation/app/: Ast.hs  Eval.hs  Gensym.hs  Main.hs  Parser.hs
implementation/examples/: actions.cam  actions.cba  betabernoulli.cam  betabernoulli.cba  clustergraph.cam  clustergraph.cba  collect.cba  declare.cba  declare_state.cba  declare_unhandled.cba  encodeactions.cam  encodeactions.cba  erdosrenyi.cam  erdosrenyi.cba  func.cam  func3.cba  local_state.cam  local_state.cba  new.cba  pattern_matching.cba  pickMax.cam  pickMax.cba  poly_fold_refs.cba  poly_map_pair.cba  poly_swap_refs.cba  poly_with_ref.cba  polya.cam  polya.cba  precedence.cam  print.cba  random.cam  substitution.cam  type_params.cba  type_params_abstract.cba  type_params_abstract_handler.cba  type_params_mismatch.cba  type_params_missing_op.cba  type_params_nested.cba
implementation/src/: Ast.hs  Environment.hs  Eval.hs  Gensym.hs  Main.hs  Parser.hs  Syntax.hs  Types.hs
implementation/src/Inference/: Context.hs  Effects.hs  Infer.hs  InitialContext.hs  Initialisation.hs  Monad.hs  Substitutable.hs  Types.hs  Unify.hs
implementation/src/Parser/: Desugar.hs  Lexer.x  Parser.hs  Parser.y  SugaredAst.hs
implementation/src/Parsing/: BaseToken.hs  Desugar.hs  Lexer.hs  Lexer.x  Parser.y  SugaredSyntax.hs  Token.hs
implementation/test/: Main.hs
implementation/test/examples/: either_check.cba  err_unknown_op.cba  fun_app_check.cba  handler_effect_leak.cba  handler_finally.cba  handler_passthrough.cba  nested_do.cba  pair_check.cba  polymorphic_id.cba  rec_effects.cba
language_reference/: language_reference.tex  library.bib  typing-rules.tex
paper/: main.tex  references.bib
reference/: cambria.tex
src/: Environment.hs  Eval.hs  Main.hs  Syntax.hs  Types.hs
src/Inference/: Context.hs  Effects.hs  Infer.hs  Monad.hs  Substitutable.hs  Unify.hs
src/Parsing/: Desugar.hs  Lexer.x  Parser.y  SugaredSyntax.hs  Token.hs
test/: Main.hs
test/cases/annot/: comp-closed-exact.cba  comp-closed-too-tight.cba  comp-open-extra-allowed.cba  comp-open-no-ops.cba  comp-pair-result.cba  comp-pure.cba  fun-mismatch.cba  fun-pass.cba  fun-with-effects.cba  handler-discharge-effect.cba  handler-mismatch.cba  handler-trivial.cba  value-do-body.cba  value-mismatch.cba  value-pass.cba  value-pins-polymorphic.cba
test/cases/comp/: closure-capture.cba  do-sequential.cba  substitution.cba
test/cases/core/: collect.cba  effects-accumulate.cba  either-left.cba  fresh.cba  function-app.cba  if-bool.cba  pair-structural.cba  pick-max.cba  polymorphic-id.cba  print.cba  random.cba  recursive-effects.cba  (+1 more)
test/examples/: err_type_mismatch.cba  handler_finally.cba  handler_passthrough.cba  if_check.cba
test/todo/: type_params_abstract.cba
web/: README.md  index.html  serve.py  worker.js
web/wasm/: MainWasm.hs  build.sh  test.mjs
(+57 files in other folders)
