cabal-version:      2.4
name:               cambria
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jack Liell-Cock
maintainer:         jackliellcock@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cambria
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Ast
    Eval
    Parser
    Gensym

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base >=4.16.4.0,
    containers >=0.6.5.1,
    megaparsec >=9.5.0,
    text >=1.2.5.0,
    parser-combinators >=1.3.0,
    mtl >=2.2.2,
    random >=1.3.1
  hs-source-dirs:   src
