cabal-version:      2.4
name:               cambria
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jack Liell-Cock
maintainer:         jackliellcock@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cambria
  main-is:          Main.hs

  build-tools:
    alex >= 3.2,
    happy >= 1.20

  -- Modules included in this executable, other than Main.
  other-modules:
    Syntax
    Environment
    Eval
    Parsing.Parser
    Parsing.Lexer
    Parsing.SugaredSyntax
    Parsing.Desugar
    -- Inference.Types
    -- Inference.Infer
    -- Inference.Substitutable
    -- Inference.InitialContext
    -- Inference.Unify

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base >= 4.16.4.0,
    containers >= 0.6.5.1,
    text >= 1.2.5.0,
    random >= 1.3.1,
    mtl >= 2.3.1,
    array >= 0.5
  hs-source-dirs:   src
