cabal-version:      2.4
name:               cambria
version:            0.1.0.0

synopsis:           A simple interpreter for a parameterized effect and handler based language.
description:        Cambria is a project demonstrating type inference and evaluation for a
                    functional programming language with parameterized algebraic effects and handlers.
license:            MIT
author:             Jack Liell-Cock
maintainer:         jackliellcock@gmail.com
-- bug-reports:
copyright:          2025 Jack Liell-Cock
-- extra-source-files: CHANGELOG.md

executable cambria
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src

  other-modules:
    Types
    Syntax
    Environment
    Eval
    Parsing.Token
    Parsing.Parser
    Parsing.Lexer
    Parsing.SugaredSyntax
    Parsing.Desugar
    Inference.Infer
    Inference.Initialisation
    Inference.Substitutable
    Inference.Unify

  build-depends:
    base >= 4.16.4.0,
    containers >= 0.6.5.1,
    text >= 1.2.5.0,
    random >= 1.3.1,
    mtl >= 2.3.1,
    array >= 0.5

  build-tool-depends:
    alex:alex >= 3.2,
    happy:happy >= 1.20

test-suite cambria-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   test, src

  other-modules:
    Types
    Syntax
    Environment
    Eval
    Parsing.Token
    Parsing.Parser
    Parsing.Lexer
    Parsing.SugaredSyntax
    Parsing.Desugar
    Inference.Infer
    Inference.Initialisation
    Inference.Substitutable
    Inference.Unify

  build-depends:
    base >= 4.16.4.0,
    containers >= 0.6.5.1,
    text >= 1.2.5.0,
    random >= 1.3.1,
    mtl >= 2.3.1,
    array >= 0.5

  build-tool-depends:
    alex:alex >= 3.2,
    happy:happy >= 1.20
